--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular4</title>
+  <title>Алавастр</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  
+  <link href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!--<link href="../../node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">-->
+  <!--<link href="assets/css/bootstrap-grid.min.css" rel="stylesheet">
+  <link href="assets/css/bootstrap-reboot.min.css" rel="stylesheet">-->
 </head>
-<body>
-  <app-root>Loading...</app-root>
+<body> <!--style="background-color: rgb(248,221,176);background-color: rgb(236,231,202);"-->
+<app-root>Загрузка...</app-root>
 </body>
 </html>
